--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^5.1.0",
     "md5": "^2.3.0",
     "mongoose": "^8.14.0",
-    "mongoose-slug-updater": "^3.3.0"
+    "mongoose-slug-updater": "^3.3.0",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
